vids and links updated

--- a/page2.html
+++ b/page2.html
@@ -88,7 +88,7 @@
                     <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
                     <p> can & should probably explain in multiple paragraphs </p>
             </div>
-            <a href= "https://drive.google.com/drive/u/0/folders/1ppx05IN9Um3ruIUPy9hEzEvbEGNKOVRk" class="button1" class="right_button">watch full doc</a>
+            <a href= "https://drive.google.com/drive/u/0/folders/1ppx05IN9Um3ruIUPy9hEzEvbEGNKOVRk" class="button1" >watch full doc</a>
         </div>
 
         <h4 class="title">Pride is Visibility (2022)</h4> 
@@ -100,7 +100,7 @@
             </div>
             <div class="grid-item">
                 <video controls>
-                    <source src="./img/videos/pcdp_trailer.mp4" type="video/mp4" class="responsive">
+                    <source src="./img/videos/pride.mp4" type="video/mp4" class="responsive">
                 </video>   
                 <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
                     Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
