about content (pg2)

--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
 
     <main class="grid">
         <h1>Welcome to my Site</h1>
-        <h3>pronouns: she/her</h3> 
+        <h3>I'm Anel Villalobos
+          pronouns: she/her</h3> 
         <hr>
 
-        <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
-                Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
-            for others to allow others to better understand different experiences. </p>
-        <p>I also hope to learn how to make a nicer looking website to use as a portfolio through this course</p>
+        <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies. 
+          Throughout my time at the university I have had the great opportunity to not only learn so much about the world,
+          but also about myself.</p>
+        <p> Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
+          for others to allow others to better understand different experiences. I've taken many classes that contribute to my love and 
+          skills in media making over my three years in my major and CTD minor, and I always look for ways to apply them into my documentary media. </p>
         
         <div class="grid-container">
             <div class="grid-item">
@@ -50,7 +53,7 @@
                     <ol>  
                         <li>Provide new perspectives </li>
                         <li>Serve as representation for underrepresented people and ideas in media </li>
-                        <li>Making a meaningful contributtion to society </li>
+                        <li>Present digestible and decent projects  </li>
                     </ol>
                 </div> 
 
