--- a/page3.html
+++ b/page3.html
@@ -35,10 +35,13 @@
       <h4>Audio</h4> 
       <div class="container_3">
           <div class="grid-item">
-            <p>Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. <p> 
-            <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
-                  Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
-              for others to allow others to better understand different experiences. </p>
+            <p> The effective use of sound requires intelligibility in recordings of the 
+              human voice as well as a creative exploration of how reality can be communicated to audiences beyond what's spoken. <p> 
+            <p>When considering the life of audio in films, one has to ask themselves: Will your project remain exclusively in a realistic sound design or will 
+              there be moments of subjective or expressionistic sound? Will your documentary use music and if so, how? </p>
+              <p> These questions open up a world that we can explore simply through the power of listening and hearing sounds. One thing I will always remember from 
+                my classes in media practices is that a video with good audio and poor visuals will always be more well recieved than one with poor audio and decent visuals.
+               </p>
           </div>
           <div class="audio_container">
                   <h6>Acoustic Radio Interference</h6>
@@ -48,7 +51,11 @@
                       Acoustic Radio Interference 
                     </audio>
                   <div class="about_audio">
-                    <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+                    <p> This audio was my final project for Sound and Technology, in which I applied as much content and techniques of capturing and editing sounds
+                      I gained from the class to create a rhythmic exploration of radio interferences and live recorded music. </p>
+                    <p> I captured most of the audio for this project myself, using a handheld radio for the static noise and live stations, and an H6 audio recorder
+                      to record me playing a few of my favorite songs on the guitar. I did, however, download the actual songs to give the effect that they
+                      were being played on the radio but were constantly intterupted by my own acoustic covers.
                   </div>
           </div>
 
@@ -60,17 +67,23 @@
                 Saturday Night at Union Station 
               </audio>
             <div class="about_audio">
-              <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+              <p> This was an audio project for my Creative Media Making class, where I pushed myself to talk to strangers at Union Station, capturing some interesting interactions. </p>
+              <p> All of the audio used in this project was captured in one night using the same old H6 recorder and an NGT-2 microphone. I edited the sounds in a manner that would
+                tell a story in a kind of immersive way. Here I employed my narration as a way to provide some context for the responses my subjects provided, without including very much of my 
+                actual presence in the space. </p>
+              <p> The project was inspired by the format of the Phantom Power podcasts.</p>
             </div>
           </div>
       </div>
       <hr>
 
       <h4>Photography & Design</h4> 
-      <p>Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. <p> 
-        <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
-              Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
-          for others to allow others to better understand different experiences. </p>
+      <p> Making strong preparatory choices about how to frame and light shots as well as deciding whether the camera will be on a tripod or handheld is vital
+        to producing effective visual work.<p> 
+        <p>Learning how to operate a camera has been a process that I am still navigating today as I continue to explore and try out different gear out of mere curiosity.
+          Over time I have also had the opportunity to aquire my own video camera and a digital photo camera, and even though they're not of the greatest quality, they 
+        provide depictions of real life. Understranding the various components of these devices can only be beneficial as we attempt to capture the right moments in the 
+      best frames possible. As a photographer and/or cinematographer, we are in control of shooting formats, lighting, shot size, camera placement, and so much more. </p>
       <div class="container_4">        
           <div class="photo_container">
                   <h6>Companions Photobook</h6>
