--- a/page3.html
+++ b/page3.html
@@ -93,7 +93,15 @@
                   <img src="/img/cspread4.png" width="550" height="240" alt="spread1" class="responsive" >
 
                   <div class="about_photo">
-                    <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+                    <p>This multi-page publication depicts how close people are to the ones they call “best friends" 
+                      or partners in life. I observe the dynamics in relationships of people I am close to, capturing their mannerisms
+                       with one another, and the range of emotions they experience together. The book is categorized by age groups and the 
+                       type of relationship (best friends, coworkers, classmates, married couples, etc.) as I have noticed differences 
+                       in how relationships of varying generations and labels have different ideas of what it means to show affection.
+                    </p>
+                    <p>The design element of the spreads was led by the desire to see these images speak to one abother, both through structure and through content. </p> 
+                
+                    </p>
                   </div>
           </div>
 
@@ -103,7 +111,12 @@
             <img src="/img/spread2.jpeg" width="550" height="240" alt="spread1" class="responsive" >
               
             <div class="about_photo">
-              <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+              <p>As artists, we use mediums that help us communicate and express ourselves with the rest of the world. We become one with our instruments, 
+                and the art that comes out of how we use these outlets becomes a reflection of ourselves as we have immersed ourselves in the creative process, 
+                our collections are continually expanding as we grow as artists and continue to create. </p>
+              <p> All of the images in this project are photographs I took of my friends and what I liked to call, "their tools for expression" surrounding or immersing them. 
+                Unfortunately, I only have one example here because the other images were not saved as spreads, but I hope to update this site.
+              </p>
             </div>
           </div>
       </div>
