--- a/page4.html
+++ b/page4.html
@@ -33,14 +33,15 @@
       <hr>
 
       <h4 class="pg4_about">Why did I create this site?</h4> 
-      <p class="pg4_about"> Explain what the page is for here.Explain what the page is for here.Explain what the page is for here. </p>
+      <p class="pg4_about"> The obvious answer is that I did it for a grade. Other than this, though, I wanted to create a website that allows myself and others
+        to consider my approaches to media making as an individual, since I pride much of my work from my identity and experiences, to provide perspectives and visibility to subjects
+      I find imporant. This is not to say that all of my work has a deeper message or anything, I do take advantage of the liberty to create as a way to push my boundaries and 
+        explore new approached to the art of digital media.  </p>
 
       <h4 class="pg4_about">Where will I go from here?</h4> 
-      <p class="pg4_about"> Explain what the page is for here. Explain what the page is for here. Explain what the page is for here. </p>
-
-      <div class="container_3">
-      
-      </div>
+      <p class="pg4_about"> Thanks to this class I have properly learned to create my own website from scratch. Even though I am not fully satisfied with the layouts
+        and overall design of my site, I will not deny the artistic capabilities I've yet to explore in coding HTML and CSS. I plan to come back to better my stylistic practices
+      for putting together an appealing website.  </p>
       
     </main>
 
