--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main class="grid">
         <h1>Welcome to my Site</h1>
-        <h3>I'm Anel Villalobos, pronouns: she/her</h3> 
+        <h3>I'm Anel Villalobos - pronouns: she/her</h3> 
         <hr>
 
         <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies. 
