--- a/assignments/ica8/ica8.html
+++ b/assignments/ica8/ica8.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="../../css/ica8.css">
 
-    <title>Document</title>
+    <title>ICA 8</title>
 </head>
 <body>
     <div id="myDiv"> 
