--- a/assignments/assignment8.html
+++ b/assignments/assignment8.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="../css/styless.css">
-
     <title>Silly story generator</title>
+
+    <link rel="stylesheet" href="../css/styless.css">
 
     <style>
 
@@ -37,9 +37,10 @@
     }
 
     </style>
+    
   </head>
 
-  <body>
+  <body class="sillystory">
     <div>
       <label for="customname">Enter custom name:</label>
       <input id="customname" type="text" placeholder="">
