--- a/assignments/assignment8.html
+++ b/assignments/assignment8.html
@@ -56,6 +56,6 @@
     <p class="story"></p>
     
 
-    <script defer src="../../js/main.js"> </script>
+    <script defer src="../../js/new.js"> </script>
   </body>
 </html>
