--- a/assignments/quizzes/quiz10.html
+++ b/assignments/quizzes/quiz10.html
@@ -59,6 +59,26 @@
 
         motherInfo = motherInfo.concat("", `and ${catString[catString.length - 1].name}.`);
 
+// class code here
+
+        const cats = JSON.parse(catString);
+
+        for (let i = 0; i < cats.length; i++) {
+            for(const kitten of cats[i].kittens) {
+                total++;
+                if (kitten.gender==='m') {
+                    male++;
+                }
+            }
+
+        if (i < (cats.length - 1)) {
+            motherInfo += `and ${cats[i].name},`;
+        } else {
+            motherInfo += `and ${cats[i].name}.`;
+        }
+    }
+
+    kittenInfo = `There are ${total} kittens in total, ${male} males and ${total}`;
 
       // Don't edit the code below here!
 
