--- a/assignments/assignment11/assignment11.html
+++ b/assignments/assignment11/assignment11.html
@@ -28,6 +28,9 @@
           <button type="button" id="js-new-image" class="new-image button">
             Talk to another doggo
           </button>
+          
+          <p>My extension is making the second button fetch two APIs to change the image and quote content together, while the first button only offers up another activity suggestion from the first dog.</p>
+
         </section>
 
       </div>
