--- a/assignments/assignment11/assignment11.html
+++ b/assignments/assignment11/assignment11.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assignment11.css">
-    <title>Activity Recomendation from Doggo</title>
+    <title>Activity Recommendation from Doggo</title>
 </head>
 <body>
     <div class="app">
