wa13 removed unnecessary div

--- a/assignments/wa13(EC)/wa13css.html
+++ b/assignments/wa13(EC)/wa13css.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="wa13css.css">
 </head>
 <body>
-    <div class="content">
+
     <div class="left">
         <div id="headshot">
-            <img src="/img/headshot.png"></img>
+            <img src="/img/headshot.png" alt="anthony headshot">
         </div>
         <div id="navi">
             <h1>Anthony Pinter.</h1>
         </div>
-        <ul id="navi">
+        <ul>
             <li>home.</li>
             <li>about.</li>
             <li>publications.</li>
@@ -46,7 +46,7 @@
             <li>14 NOVEMBER 2022 | I'm presenting at CSCW 2022 this week, on work I did with Jed Brubaker. Link here.</li>
             <li>19 OCTOBER 2022 | Jack Manning (CTD undergraduate) and I contributed to a game hosted by the Center for Research Data and Digital Scholarship at CU Boulder.</li>
             <li>29 JULY 2022 | I have published a book chapter, co-authored with Pam Wisniewski and Arup Ghosh. More here.</li>
-
+        </ul>
     </div>
     </div>
 </body>
