art generator incorporated

--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,9 @@
         <li>
           <a href="page4.html">About</a>
         </li>
+        <li>
+            <a href="/art_generator/art_gen.html">Pixel Canvas</a>
+        </li>
       </ul>
     </nav>
     
