--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li>
           <a href="page4.html">About</a>
         </li>
+        <li>
+          <a href="/art_generator/art_gen.html">Pixel Canvas</a>
+        </li>
       </ul>
     </nav>
     
