art_gen to page6

--- a/page6.html
+++ b/page6.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" 
         rel="stylesheet" >
     <!--Stylesheet-->
-    <link rel="stylesheet" href="art_gen.css">
+    <link rel="stylesheet" href="/art_generator/art_gen.css">
 </head>
 <body>
     <!--All the buttons and sliders-->
@@ -41,6 +41,6 @@
 
 
     <!--Script-->
-<script src="art_gen.js"> </script>
+<script src="/art_generator/art_gen.js"> </script>
 </body>
 </html>
