updated nav bars
- changed headings in page 3 for sections & project titles (based on feedback)

--- a/page2.html
+++ b/page2.html
@@ -4,35 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Documentary Projects</title>
     <link rel="stylesheet" href="css/styless.css" >
 </head>
 <body>
 
     <nav>
-      <label class="logo">L</label>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
+        <label class="logo">L</label>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="page2.html">Documentary Projects</a>
+          </li>
+          <li>
+            <a href="page3.html">Transitional Work</a>
+          </li>
+          <li>
+            <a href="page6.html">Art Generator</a>
+          </li>
+          <li>
+            <a href="page5.html">Upcoming Work</a>
         </li>
-        <li>
-          <a href="page2.html">Projects</a>
-        </li>
-        <li>
-          <a href="page3.html">Transitional Work</a>
-        </li>
-        <li>
-          <a href="page4.html">About</a>
-        </li>
-        <li>
-            <a href="/art_generator/art_gen.html">Pixel Canvas</a>
-        </li>
-      </ul>
-    </nav>
+          <li>
+            <a href="page4.html">About</a>
+          </li>
+        </ul>
+      </nav>
     
 
     <main class="grid">
-        <h1>Projects</h1>
+        <h1>Documentary Projects</h1>
         <h3>Short Documentary Media & Videos</h3> 
         <hr>
 
