--- a/page3.html
+++ b/page3.html
@@ -9,33 +9,36 @@
 </head>
 <body>
 
-    <nav>
-      <label class="logo">L</label>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="page2.html">Projects</a>
-        </li>
-        <li>
-          <a href="page3.html">Transitional Work</a>
-        </li>
-        <li>
-          <a href="page4.html">About</a>
-        </li>
-        <li>
-          <a href="/art_generator/art_gen.html">Pixel Canvas</a>
-        </li>
-      </ul>
-    </nav>
+  <nav>
+    <label class="logo">L</label>
+    <ul>
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="page2.html">Documentary Projects</a>
+      </li>
+      <li>
+        <a href="page3.html">Transitional Work</a>
+      </li>
+      <li>
+        <a href="page6.html">Art Generator</a>
+      </li>
+      <li>
+        <a href="page5.html">Upcoming Work</a>
+    </li>
+      <li>
+        <a href="page4.html">About</a>
+      </li>
+    </ul>
+  </nav>
 
     <main class="grid">
       <h1>Transitional Work</h1>
       <h3>Multimedia Projects</h3> 
       <hr>
 
-      <h4>Audio</h4> 
+      <h2>Audio</h2> 
       <div class="container_3">
           <div class="grid-item">
             <p> The effective use of sound requires intelligibility in recordings of the 
@@ -47,7 +50,7 @@
                </p>
           </div>
           <div class="audio_container">
-                  <h6>Acoustic Radio Interference</h6>
+                  <h4>Acoustic Radio Interference</h4>
                   <img src="/img/wav.png" width="360" height="200" alt="project wav" class="responsive" >
                     <audio controls>
                       <source src="./audio/Villalobos_SoundFinal.mp3" type="audio/mpeg">
@@ -63,7 +66,7 @@
           </div>
 
           <div class="audio_container">
-            <h6>Saturday Night at Union Station</h6>
+            <h4>Saturday Night at Union Station</h4>
             <img src="/img/union.jpeg" width="300" height="200" alt="union station" class="responsive" >
               <audio controls>
                   <source src="./audio/UnionStation_mixdown.mp3" type="audio/mpeg">
@@ -80,7 +83,7 @@
       </div>
       <hr>
 
-      <h4>Photography & Design</h4> 
+      <h2>Photography & Design</h2> 
       <p> Making strong preparatory choices about how to frame and light shots as well as deciding whether the camera will be on a tripod or handheld is vital
         to producing effective visual work.<p> 
         <p>Learning how to operate a camera has been a process that I am still navigating today as I continue to explore and try out different gear out of mere curiosity.
@@ -89,7 +92,7 @@
       best frames possible. As a photographer and/or cinematographer, we are in control of shooting formats, lighting, shot size, camera placement, and so much more. </p>
       <div class="container_4">        
           <div class="photo_container">
-                  <h6>Companions Photobook</h6>
+                  <h4>Companions Photobook</h4>
                   <img src="/img/cspread1.png" width="550" height="240" alt="spread1" class="responsive" >
                   <img src="/img/cspread2.png" width="550" height="240" alt="spread1" class="responsive" >
                   <img src="/img/cspread3.png" width="550" height="240" alt="spread1" class="responsive" >
@@ -108,7 +111,7 @@
           </div>
 
           <div class="photo_container">
-            <h6>Reframing Portrait</h6>
+            <h4>Reframing Portrait</h4>
             <img src="/img/spread1.png" width="550" height="240" alt="spread1" class="responsive" >
             <img src="/img/spread2.jpeg" width="550" height="240" alt="spread1" class="responsive" >
               
