--- a/page4.html
+++ b/page4.html
@@ -9,26 +9,29 @@
 </head>
 <body>
 
-    <nav>
-      <label class="logo">L</label>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="page2.html">Projects</a>
-        </li>
-        <li>
-          <a href="page3.html">Transitional Work</a>
-        </li>
-        <li>
-          <a href="page4.html">About</a>
-        </li>
-        <li>
-          <a href="/art_generator/art_gen.html">Pixel Canvas</a>
-        </li>
-      </ul>
-    </nav>
+  <nav>
+    <label class="logo">L</label>
+    <ul>
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="page2.html">Documentary Projects</a>
+      </li>
+      <li>
+        <a href="page3.html">Transitional Work</a>
+      </li>
+      <li>
+        <a href="page6.html">Art Generator</a>
+      </li>
+      <li>
+        <a href="page5.html">Upcoming Work</a>
+    </li>
+      <li>
+        <a href="page4.html">About</a>
+      </li>
+    </ul>
+  </nav>
 
     <main class="grid">
       <h1>About</h1>
