--- a/art_generator/art_gen.html
+++ b/art_generator/art_gen.html
@@ -10,45 +10,45 @@
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" 
         rel="stylesheet" >
     <!--Stylesheet-->
-    <link rel="stylesheet" href="./css/styless.css">
+    <link rel="stylesheet" href="mysite.css">
 </head>
 <body>
-
-<nav>
-    <label class="logo">L</label>
-    <ul>
-        <li>
-        <a href="index.html">Home</a>
+    <nav>
+        <label class="logo">L</label>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="page2.html">Documentary Projects</a>
+          </li>
+          <li>
+            <a href="page3.html">Transitional Work</a>
+          </li>
+          <li>
+            <a href="page6.html">Art Generator</a>
+          </li>
+          <li>
+            <a href="page5.html">Upcoming Work</a>
         </li>
-        <li>
-        <a href="page2.html">Documentary Projects</a>
-        </li>
-        <li>
-        <a href="page3.html">Transitional Work</a>
-        </li>
-        <li>
-        <a href="page6.html">Art Generator</a>
-        </li>
-        <li>
-        <a href="page5.html">Upcoming Work</a>
-    </li>
-        <li>
-        <a href="page4.html">About</a>
-        </li>
-    </ul>
-</nav>
+          <li>
+            <a href="page4.html">About</a>
+          </li>
+        </ul>
+      </nav>
 
     <!--All the buttons and sliders-->
+    <div class="art_body">
     <div class="wrapper">
         <div class="options">
             <div class="opt-wrapper">
                 <div class="slider">
-                    <label for="width-range"> Grid Width </label>
+                    <label class="range-labels" for="width-range"> Grid Width </label>
                     <input type="range" id="width-range" min="1" max="35">
                     <span id="width-value">00</span>
                 </div>
                 <div class="slider">
-                    <label for="height-range"> Grid Height </label>
+                    <label class="range-labels" for="height-range"> Grid Height </label>
                     <input type="range" id="height-range" min="1" max="35">
                     <span id="height-value">00</span>
                 </div>
@@ -56,7 +56,7 @@
             <div class="opt-wrapper">
                 <button id="submit-grid">Create Grid</button>
                 <button id="clear-grid">Clear Grid</button>
-                <p> Select Color:</p>
+                <p>Select Color:</p>
                 <input type="color" id="color-input">
                 <button id="erase-btn">Erase</button>
                 <button id="paint-btn">Paint</button>
@@ -64,9 +64,10 @@
         </div>
         <div class="container"></div>
     </div>
+    </div>
 
 
     <!--Script-->
-<script src="./art_generator/art_gen.js"> </script>
+<script src="art_gen.js"> </script>
 </body>
 </html>
