--- a/page5.html
+++ b/page5.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anel's Site</title>
+<!-- change title -->
+    <title>CHANGE NAME</title>
     <link rel="stylesheet" href="css/styless.css" >
 </head>
 
 <body>
 
     <nav>
-      <label class="logo">L</label>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
+        <label class="logo">L</label>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="page2.html">Documentary Projects</a>
+          </li>
+          <li>
+            <a href="page3.html">Transitional Work</a>
+          </li>
+          <li>
+            <a href="page6.html">Art Generator</a>
+          </li>
+          <li>
+            <a href="page5.html">Upcoming Work</a>
         </li>
-        <li>
-          <a href="page2.html">Documentary Projects</a>
-        </li>
-        <li>
-          <a href="page3.html">Transitional Work</a>
-        </li>
-        <li>
-          <a href="page6.html">Art Generator</a>
-        </li>
-        <li>
-          <a href="page5.html">Upcoming Work</a>
-      </li>
-        <li>
-          <a href="page4.html">About</a>
-        </li>
-      </ul>
-    </nav>
+          <li>
+            <a href="page4.html">About</a>
+          </li>
+        </ul>
+      </nav>
     
 
     <main class="grid">
-        <h1>Welcome to my Site</h1>
-        <h3>I'm Anel Villalobos - pronouns: she/her</h3> 
+        <h1>Upcoming Work</h1>
+        <h3>Projects in progress</h3> 
         <hr>
 
         <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies. 
@@ -70,11 +71,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
-
-        <hr>
-        <div class="bottom">
-        <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
         </div>
     </main>
 </body>
