new nav bar (only on pg 5 rn)

--- a/art_generator/art_gen.html
+++ b/art_generator/art_gen.html
@@ -13,29 +13,17 @@
     <link rel="stylesheet" href="mysite.css">
 </head>
 <body>
-    <nav>
-        <label class="logo">L</label>
-        <ul>
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="page2.html">Documentary Projects</a>
-          </li>
-          <li>
-            <a href="page3.html">Transitional Work</a>
-          </li>
-          <li>
-            <a href="page6.html">Art Generator</a>
-          </li>
-          <li>
-            <a href="page5.html">Upcoming Work</a>
-        </li>
-          <li>
-            <a href="page4.html">About</a>
-          </li>
-        </ul>
-      </nav>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
 
     <!--All the buttons and sliders-->
     <div class="art_body">
@@ -68,6 +56,6 @@
 
 
     <!--Script-->
-<script src="art_gen.js"> </script>
+<script src="art_gen_test.js"> </script>
 </body>
 </html>
