--- a/index.html
+++ b/index.html
@@ -9,30 +9,19 @@
 </head>
 
 <body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <nav>
-      <label class="logo">L</label>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="page2.html">Documentary Projects</a>
-        </li>
-        <li>
-          <a href="page3.html">Transitional Work</a>
-        </li>
-        <li>
-          <a href="page6.html">Art Generator</a>
-        </li>
-        <li>
-          <a href="page5.html">Upcoming Work</a>
-      </li>
-        <li>
-          <a href="page4.html">About</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="topnav" id="myTopnav">
+      <a href="index.html" class="active">Home</a>
+      <a href="page2.html">Documentary Projects</a>
+      <a href="page3.html">Transitional Work</a>
+      <a href="page6.html">Art Generator</a>
+      <a href="page5.html">Upcoming Work</a>
+      <a href="page4.html">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+  </div>
     
 
     <main class="grid">
@@ -77,5 +66,6 @@
         <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
         </div>
     </main>
+    <script src="./art_generator/art_gen.js"> </script>
 </body>
 </html>
