updated nav bar js
redid some css for the about sections, trying to get the art generator to display: grid instead of display:flex when under 480px screen width

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <div class="grid-container">
             <div class="grid-item">
-                <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="responsive" >
+                <img src="./img/headshot.jpg" width="400" height="590" alt="My headshot" class="responsive" >
             </div>
 
             <div class="container_2">
@@ -48,14 +48,17 @@
                         <li>Provide new perspectives </li>
                         <li>Serve as representation for underrepresented people and ideas in media </li>
                         <li>Present digestible and decent projects  </li>
+                        <li> Motivate more individuals to pursue expressive art practices </li>
                     </ol>
                 </div> 
 
                 <div class="grid-item">
-                    <h5> These are two programs I work with that motivate my advocacy in my creative pursuits: </h5>
+                    <h5> These are some programs I work with that motivate my advocacy in my creative pursuits: </h5>
                     <ul>
                         <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
                         <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
+                        <li> <a href="https://www.colorado.edu/mcneill/" class="job1"> McNeill Academic Program</a> </li>
+                        <li> <a href="http://bridgingdigitaldivides.org/" class="job1"> Bridging the Digital Divide </a> </li>
                     </ul>
                 </div>
             </div>
@@ -66,6 +69,6 @@
         <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
         </div>
     </main>
-    <script src="./art_generator/art_gen.js"> </script>
+    <script src="./js/navbar.js"> </script>
 </body>
 </html>
