--- a/page2.html
+++ b/page2.html
@@ -140,6 +140,6 @@
         </div>
 
     </main>
-    <script src="./art_generator/art_gen.js"> </script>
+    <script src="./js/navbar.js"> </script>
 </body>
 </html>
