--- a/page3.html
+++ b/page3.html
@@ -73,9 +73,9 @@
       <hr>
 
       <h2>Photography & Design</h2> 
-      <p> Making strong preparatory choices about how to frame and light shots as well as deciding whether the camera will be on a tripod or handheld is vital
+      <p class="p-d"> Making strong preparatory choices about how to frame and light shots as well as deciding whether the camera will be on a tripod or handheld is vital
         to producing effective visual work.<p> 
-        <p>Learning how to operate a camera has been a process that I am still navigating today as I continue to explore and try out different gear out of mere curiosity.
+        <p class="p-d">Learning how to operate a camera has been a process that I am still navigating today as I continue to explore and try out different gear out of mere curiosity.
           Over time I have also had the opportunity to aquire my own video camera and a digital photo camera, and even though they're not of the greatest quality, they 
         provide depictions of real life. Understranding the various components of these devices can only be beneficial as we attempt to capture the right moments in the 
       best frames possible. As a photographer and/or cinematographer, we are in control of shooting formats, lighting, shot size, camera placement, and so much more. </p>
@@ -116,6 +116,6 @@
       </div>
 
     </main>
-    <script src="./art_generator/art_gen.js"> </script>
+    <script src="./js/navbar.js"> </script>
 </body>
 </html>
