--- a/page4.html
+++ b/page4.html
@@ -39,6 +39,6 @@
       for putting together an appealing website.  </p>
       
     </main>
-    <script src="./art_generator/art_gen.js"> </script>
+    <script src="./js/navbar.js"> </script>
 </body>
 </html>
