--- a/page6.html
+++ b/page6.html
@@ -28,7 +28,7 @@
     </div>
 
 <main class="art-grid">
-<h1>Interactive Project - Pixel Art Generator</h1>
+<h1>Interactive Art - Pixel Canvas</h1>
 <h3>Let Your Creativity Shine</h3> 
 <hr>
     <div class="art-grid-container">
@@ -62,6 +62,6 @@
 
 </main>
     <!--Script-->
-<script src="./art_generator/art_gen.js"> </script>
+<script src="./js/art_gen.js"> </script>
 </body>
 </html>
