--- a/page5.html
+++ b/page5.html
@@ -62,6 +62,6 @@
             </div>
         </div>
     </main>
-    <script src="./art_generator/art_gen.js"> </script>
+    <script src="./js/navbar.js"> </script>
 </body>
 </html>
