--- a/page6.html
+++ b/page6.html
@@ -20,7 +20,7 @@
         <a href="page2.html">Documentary Projects</a>
         <a href="page3.html">Transitional Work</a>
         <a href="page6.html" class="active">Art Generator</a>
-        <a href="page5.html">Upcoming Work</a>
+        <a href="page5.html">Future Work</a>
         <a href="page4.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
