--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
         <a href="page2.html" class="active">Documentary Projects</a>
         <a href="page3.html">Transitional Work</a>
         <a href="page6.html">Art Generator</a>
-        <a href="page5.html">Upcoming Work</a>
+        <a href="page5.html">Future Work</a>
         <a href="page4.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
